[tool.poetry]
name = "specvizitor"
version = "0.4.1"
description = "Python GUI application for a visual inspection of astronomical spectroscopic data"
authors = ["Ivan Kramarenko <im.kramarenko@gmail.com>", "Josephine Kerutt <>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/ivkram/specvizitor"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
astropy = ">=6.1.0"
dacite = "1.8.1"
pandas = ">=2.2.0"
pgcolorbar = "1.1.3"
pillow = ">=10.2.0"
platformdirs = ">=4.2.0"
pyqt5 = "=5.15.10"
pyqt5-qt5 = "=5.15.2"
pyqtdarktheme = { git = "https://github.com/ivkram/PyQtDarkTheme.git", branch = "python3.12"}
pyqtgraph = ">=0.13.3"
qtpy = "2.4.1"
rasterio = ">=1.3.9"
scipy = ">=1.12.0"

[tool.poetry.group.test.dependencies]
pytest = "*"

[tool.poetry.group.docs.dependencies]
sphinx = "*"
sphinx-book-theme = "*"

[tool.poetry.scripts]
specvizitor = 'specvizitor.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
