[project]
name = "specvizitor"
version = "0.6.0"
description = "Python GUI application for a visual inspection of astronomical spectroscopic data"
authors = [
    {name = "Ivan Kramarenko", email = "im.kramarenko@gmail.com"},
    {name = "Josephine Kerutt"},
]
requires-python = ">=3.10"
readme = "README.md"
license = "BSD-3-Clause"
dependencies = [
    "astropy>=6.1.0",
    "dacite==1.8.1",
    "darkdetect>=0.8.0",
    "pandas>=2.2.0",
    "pgcolorbar==1.1.3",
    "pillow>=10.2.0",
    "platformdirs>=4.2.0",
    "pyqt5>=5.15.10",
    "pyqtgraph>=0.13.3",
    "qtpy==2.4.1",
    "rasterio>=1.3.9",
    "scipy>=1.12.0",
]

[project.urls]
Repository = "https://github.com/ivkram/specvizitor"

[project.scripts]
specvizitor = "specvizitor.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.9",
    "sphinx>=8.1.3",
    "sphinx-book-theme>=1.1.4",
]

[tool.uv]
default-groups = "all"

[tool.ruff]
extend-exclude = ["specvizitor/config/appearance"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
