[metadata]
name = specvizitor
version = 0.0.1
url = https://github.com/ivkram/specvizitor

[options]
python_requires = >=3.7
install_requires =
    astropy
    matplotlib
    pyqt5
    pyqtgraph==0.12.4
    pgcolorbar==1.1.2
    pyyaml
    platformdirs
    dictdiffer
packages = find:

[options.package_data]
specvizitor.data =
    *.yml
    *.txt

[options.entry_points]
gui_scripts =
    specvizitor = specvizitor.gui:main
